--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-list",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "https://github.com/nikolasvasconcelos/react-mobx-todo-list",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
